--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
         z-index: 1;
         top: 0;
         position: fixed;
-        background-color: #0070c543;
+        background-color: #3a96dc;
+        color: whitesmoke;
         border-bottom-left-radius: 20px;
         
 
     }
     .navbar.scrolled{
-        background-color: #d6d6d6;
+        /* background-color: #d6d6d6; */
         box-shadow: rgba(0,0,0,0.35) 0px 5px 15px;
     }
     .nav_items {
@@ -478,7 +479,7 @@
         text-align: center;
         flex-direction: column;
         gap: 0.2rem;
-        background-color: #d6d6d6;
+        /* background-color: #d6d6d6; */
         transition: 0.5s;
         z-index: -1;
         transform: translateY(-100%);
